# finetuning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
cookbook/: __init__.py  completers.py  preference.py  renderers.py  rl.py  supervised.py
cookbook/recipes/: chat_sft.py  code_rl.py  distillation.py  dpo_preference.py  math_rl.py
examples/: dpo_ultrafeedback.py  hello_tinker.py  rl_gsm8k.py  sft_alpaca.py
src/local_tinker/: __init__.py  checkpoint.py  model_registry.py  sampling_client.py  service_client.py  training_client.py  types.py  weights.py
src/local_tinker/cli/: main.py
src/local_tinker/losses/: __init__.py  base.py  cross_entropy.py  custom.py  dpo.py  grpo.py  ppo.py
src/local_tinker/utils/: __init__.py  gpu.py  logging.py  logprobs.py  tokenizer.py
tests/: test_checkpoint.py  test_cli.py  test_cookbook.py  test_losses.py  test_model_registry.py  test_sampling_client.py  test_service_client.py  test_training_client.py  test_types.py  test_utils.py  test_weights.py
