[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-tinker"
version = "0.1.0"
description = "Tinker-style API for local LoRA fine-tuning of small language models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "pydantic>=2.0.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
logging = [
    "wandb",
    "tensorboard",
]
cli = [
    "typer>=0.12.0",
]

[project.scripts]
local-tinker = "local_tinker.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/local_tinker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires GPU to run",
]
